--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,12 +33,13 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.3.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.3.1'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
-//    implementation 'com.google.android.material:material:1.1.0'
+
+
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.viewpager:viewpager:1.0.0'
     implementation 'com.android.support:multidex:1.0.3'
+    implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha03'
 
 }
 configurations.matching { it.name == '_internal_aapt2_binary' }.all { config ->
